Refactored ranked search to retrieve meta data files from Azure Blob Storage (previously these files were stored locally and access through Java's random access file). When the user selected ranked search mode, a GET request is made to the boolean search servlet (to download the files before a query is made).